--- a/quarkus-social/src/main/resources/application.properties
+++ b/quarkus-social/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
 quarkus.datasource.jdbc.max-size=16
 
 
-#Conex„o MYSQL
+#Conex√£o MYSQL
 #quarkus.datasource.db-kind=mysql
 #quarkus.datasource.username=root
 #quarkus.datasource.password=root
