--- a/quarkus-social/src/main/resources/application.properties
+++ b/quarkus-social/src/main/resources/application.properties
@@ -1,29 +1,40 @@
 #GLOBAL
-# quarkus.datasource.db-kind=postgresql 
-# quarkus.datasource.username=postgres
-# quarkus.datasource.password=postgres
+quarkus.datasource.db-kind=postgresql 
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
 
-# quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
-# quarkus.datasource.jdbc.max-size=16
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
+quarkus.datasource.jdbc.max-size=16
 
 
 quarkus.swagger-ui.always-include=true
 
-#TESTE
-quarkus.datasource.db-kind=h2 
-quarkus.datasource.username=sa
-quarkus.datasource.password=sa
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:4200
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.headers=Content-Type,Authorization,origin,content-type,accept,followerId
 
-quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus-social
-quarkus.datasource.jdbc.max-size=16
-quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.log.sql=true
+quarkus.smallrye-jwt.enabled=true
+quarkus.smallrye-jwt.token-signing-key=yOUrS3cr3tK3yH3r3
+quarkus.smallrye-jwt.realmName=quarkus-social
+quarkus.smallrye-jwt.token-signature-algorithm=HS256
+
+
+#TESTE
+# quarkus.datasource.db-kind=h2 
+# quarkus.datasource.username=sa
+# quarkus.datasource.password=sa
+
+# quarkus.datasource.jdbc.url=jdbc:h2:mem:quarkus-social
+# quarkus.datasource.jdbc.max-size=16
+# quarkus.hibernate-orm.database.generation=drop-and-create
+# quarkus.hibernate-orm.log.sql=true
 
 
 #Conexão MYSQL
-#quarkus.datasource.db-kind=mysql
-#quarkus.datasource.username=root
-#quarkus.datasource.password=root
-#
-#quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
-#quarkus.datasource.jdbc.max-size=16
+# quarkus.datasource.db-kind=mysql
+# quarkus.datasource.username=root
+# quarkus.datasource.password=root
+
+# quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/quarkus-social
+# quarkus.datasource.jdbc.max-size=16
