--- a/social-frontend/social-frontend/angular.json
+++ b/social-frontend/social-frontend/angular.json
@@ -31,7 +31,16 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              {
+                "input": "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+                "bundleName": "lara-light-blue",
+                "inject": false
+              },
+              {
+                "input": "primeng/resources/themes/soho-dark/theme.css",
+                "bundleName": "soho-dark",
+                "inject": false
+              },
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeflex/primeflex.css"
 
